--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -182,14 +182,15 @@
 						<input class="" type="hidden" name="originDate" value="<%= data.originDate %>">
 						<input class="" type="hidden" name="originTm" value="<%= data.originTm %>">
 
-						<% 
-							
-							for (let i=0; i < data.class.length; i++) {
-							
-						%>
+						<% if( Array.isArray(data.class) ) { 
+                            for (let i=0; i < data.class.length; i++) { %>
 							<input class="" type="hidden" name="class" value="<%= data.class[i] %>">
 							<input class="" type="hidden" name="description" value="<%= data.description[i] %>">
-						<% } %>
+                            <% } %> 
+                        <% } else { %> 
+                                <input class="" type="hidden" name="class" value="<%= data.class %>">
+							    <input class="" type="hidden" name="description" value="<%= data.description %>">
+                        <% } %>
 
 						<input class="btn btn-primary btn-black tn-rounded-primary" type="submit" value="Add to cart">
 					</div>
@@ -236,10 +237,15 @@
 						<input class="" type="hidden" name="originDate" value="<%= data.originDate %>">
 						<input class="" type="hidden" name="originTm" value="<%= data.originTm %>">
 						
-						<% for (let i=0; i < data.class.length; i++) { %>
+						<% if( Array.isArray(data.class) ) { 
+                            for (let i=0; i < data.class.length; i++) { %>
 							<input class="" type="hidden" name="class" value="<%= data.class[i] %>">
 							<input class="" type="hidden" name="description" value="<%= data.description[i] %>">
-						<% } %>
+                            <% } %> 
+                        <% } else { %> 
+                                <input class="" type="hidden" name="class" value="<%= data.class %>">
+							    <input class="" type="hidden" name="description" value="<%= data.description %>">
+                        <% } %>
 
 						<div class="col-12">
 							<div class="form-group row box-form">
