--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -319,6 +319,13 @@
     }
 }
 
+.img-flag{
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+    margin-bottom: 15px;
+    box-shadow: 0 0 5px #ccc;
+}
 .reg-text-head{
     font-size: 21px;
     color: #fff;
