--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -15,8 +15,10 @@
 		<div class="row align-items-center flag-text-block" >
 			<div class="col-md-2">
 				<div class="flag-containerv2" style="background-image:url('images/flag/<%= country.abbr.toLowerCase() %>.png')"></div>
-				<!-- <p class="text-center" style="font-size:24px;color: #000;padding-top:10px;margin-bottom:0px;"><%= country.abbr %></p> -->
 			</div>
+			<!-- <div class="col-md-2 text-center">
+				<img class="img-flag" src='images/flags/<%= country.name.toLowerCase() %>.png'>
+			</div> -->
 				<div class="col-md-10">
 				<p class="text-reg-title-v2 text-center" style="margin-bottom:0;">Trademarkers.com will process your trademark registration in <strong class="text-uppercase"><%= country.name %></strong> through the following steps</p>
 			</div>
