--- a/email-templates/orderAdminNotification.ejs
+++ b/email-templates/orderAdminNotification.ejs
@@ -361,7 +361,9 @@
                          
                           
 
-                          Customer placed a new order.
+                          Customer placed a new order.<br>
+                          Name: <%= order.user.name %><br>
+                          Email: <%= order.user.email %>
 
                           <% if ( order.cartItems ) { %>
                             <table border="0" cellpadding="0" cellspacing="0" height="100%" class="tbl-content-orders" >
