--- a/email-templates/verifyEmailNotification.ejs
+++ b/email-templates/verifyEmailNotification.ejs
@@ -567,7 +567,10 @@
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                         
                             <div>
-<h3 class="null" style="text-align: left;"><span style="font-size:18px">Thank you for using TradeMarkers.com. Have a great day!</span></h3>
+								<p><span style="font-size:18px">If you did not create an account, no further action is required.</span></p>
+								
+								<p><span style="padding-top:20px;font-size:14px">
+									If you’re having trouble clicking the "Verify Email Address" button, copy and paste the URL below into your web browser: https://oven.trademarkers.com/customer/verify-account/<%= user._id %></span></p>
 <a> </a></div>
 <a> </a>
                         </td>
