--- a/email-templates/abandonedCart4hr.ejs
+++ b/email-templates/abandonedCart4hr.ejs
@@ -353,11 +353,11 @@
                         
 
                           <p style="margin:40 0 0 0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
-                            Thank you again for considering Trademarkers. Customer like you is the lifeblood of our business. We exist because we care.
+                            Thank you again for considering Trademarkers. Customers like you are the lifeblood of our business. We exist because we care.
                           </p>
 
                           <p style="margin:40 0 0 0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
-                            We noticed that you are just a few steps away from completing your Trademark Registration order.
+                            We noticed that you are just a few steps away from completing your Trademark Registration order. You may continue completing the steps on the tabs below.
                           </p>
 
                           <p style="margin:40 0 0 0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
@@ -375,6 +375,23 @@
                          </td> 
                         
                         </tr> 
+
+                        <tr style="border-collapse:collapse;"> 
+                          <td align="center" mc:edit="block_5" style="padding:10px;Margin:0;"><span class="es-button-border es-button-border-4" style="border-style:solid;border-color:#2CB543;background:#0B5394;border-width:0px;display:block;border-radius:25px;width:auto;">
+                            <a href="https://www.trademarkers.com/login" class="es-button es-button-3" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#0B5394;border-width:10px 20px 10px 20px;display:block;background:#0B5394;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px;">
+                              Log In to Your Account</a></span></td> 
+                         </tr> 
+                         <tr style="border-collapse:collapse;"> 
+                          <td align="center" mc:edit="block_6" style="padding:10px;Margin:0;"><span class="es-button-border es-button-border-4" style="border-style:solid;border-color:#2CB543;background:#0B5394;border-width:0px;display:block;border-radius:25px;width:auto;">
+                            <a href="https://www.trademarkers.com/checkout" class="es-button es-button-3" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#0B5394;border-width:10px 20px 10px 20px;display:block;background:#0B5394;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px;">
+                              Check Out Your Oder</a></span></td> 
+                         </tr> 
+                         <tr style="border-collapse:collapse;"> 
+                          <td align="center" mc:edit="block_7" style="padding:10px;Margin:0;"><span class="es-button-border es-button-border-4" style="border-style:solid;border-color:#2CB543;background:#0B5394;border-width:0px;display:block;border-radius:25px;width:auto;">
+                            <a href="https://www.trademarkers.com/services" class="es-button es-button-3" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#0B5394;border-width:10px 20px 10px 20px;display:block;background:#0B5394;border-radius:25px;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center;border-left-width:0px;border-right-width:0px;">
+                              Explore Our Services</a></span></td> 
+                         </tr> 
+
                        
                       </table></td> 
                     </tr> 
