--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -148,6 +148,7 @@
 					<div class="col-md-12 text-center">
 						<input class="" type="hidden" name="action" value="notLogin">
 						<input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
+						<input class="" type="hidden" name="logo_pic" value="<%= data.logo_pic %>">
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
@@ -203,6 +204,7 @@
 					<div class="col-6 text-center">
 						<input class="" type="hidden" name="action" value="notLogin">
 						<input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
+						<input class="" type="hidden" name="logo_pic" value="<%= data.logo_pic %>">
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
