--- a/views/order/validateProfile.ejs
+++ b/views/order/validateProfile.ejs
@@ -8,7 +8,8 @@
 				<div class="form-group guest-form row">
 					<div class="col-6 text-center">
 						<input class="" type="hidden" name="action" value="notLogin">
-						<input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
+                        <input class="" type="hidden" name="logoName" value="<%= data.logoName %>">
+                        <input class="" type="hidden" name="logo_pic" value="<%= data.logo_pic %>">
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
