--- a/views/customer/orderDetails.ejs
+++ b/views/customer/orderDetails.ejs
@@ -15,7 +15,7 @@
                   </div>
                 </div>
 
-                <% if( trademark.otherServices.length > 0 ) { %>
+                <% if( trademark.otherServices && trademark.otherServices.length > 0 ) { %>
                   <div class="ard-wrap stp-row">
 
                     <h3>Services needed to continue your order process</h3>
