--- a/views/trademark-order/add-service.ejs
+++ b/views/trademark-order/add-service.ejs
@@ -49,9 +49,13 @@
                             </div>
 
                         
-
+                            
                             <div class="form-group mt-2 text-center">
+                              <% if (user) { %>
                               <input type="submit" name="ncLgnFormSubmit" id="NcLgnFormSubmit" class="btn btn-solid-lg btn-blue" value="Create Service Page">
+                              <% } else { %>
+                                <p>Please login to proceed</p>
+                              <% } %>
                             </div>
 
                           </div>
