--- a/email-templates/orderCustomerNotification.ejs
+++ b/email-templates/orderCustomerNotification.ejs
@@ -771,9 +771,93 @@
 	
     
 </table>
+<% } else if (order.content) { %>
+
+	<table border="0" cellpadding="0" cellspacing="0" height="100%" class="tbl-content-orders" >
+		<thead>
+			<tr>
+				<td><strong>Service</strong></td>
+				<td><strong>Trademark</strong></td>
+				<td><strong>TM Type</strong></td>
+				<td><strong>Classes</strong></td>
+				<td><strong>Amount</strong></td>
+	
+			</tr>
+		</thead>
+	
+		<tbody>
+	
+			<tr>
+				<td><%= order.content.delivery.type %></td>
+				<td><%= order.content.word_mark ? order.content.word_mark : order.content.mark %></td>
+				<td><%= order.content.type %></td>
+				<td><%= order.content.class %></td>
+				<td>$<%= order.content.delivery.amount %></td>
+			</tr>
+		
+		<tbody>  
+
+		<tfoot>
+			<tr>
+				<td colspan="4"><strong>Total Amount in US $ </strong></td>
+					
+				<td class="amount"><strong>$80.00</strong></td>
+	
+			</tr>
+			<tr>
+				<td colspan="4"><strong>Less Payment (Stripe)</strong></td>
+				<td class="amount"><strong>$80.00</strong></td>
+			</tr>
+			<tr>
+				<td colspan="4"><strong>Balance</strong></td>
+				<td class="amount"><strong>$0.00</strong></td>
+			</tr>
+		</tfoot>
+
+	</table>
 <% } else { %>
-  Payment For: <%= order.paymentFor %><br>
-  Payment Description: <%= order.paymentDescription %>
+
+	<table border="0" cellpadding="0" cellspacing="0" height="100%" class="tbl-content-orders" >
+		<thead>
+			<tr>
+				<td><strong>Service</strong></td>
+				<td><strong>Description</strong></td>
+				<td><strong>Amount</strong></td>
+	
+			</tr>
+		</thead>
+	
+		<tbody>
+	
+			<tr>
+				<td>Trademarkers LLC Service</td>
+				<td><%= order.paymentDescription %></td>
+				<td><%= (order.charge.amount / 100 * 1.00) %></td>
+
+			</tr>
+
+		
+		<tbody>  
+
+		<tfoot>
+			<tr>
+				<td colspan="5"><strong>Total Amount in US $ </strong></td>
+					
+				<td class="amount"><strong>$<%= (order.charge.amount / 100 * 1.00) %></strong></td>
+	
+			</tr>
+			<tr>
+				<td colspan="5"><strong>Less Payment (Stripe)</strong></td>
+				<td class="amount"><strong>$<%= (order.charge.amount / 100 * 1.00) %></strong></td>
+			</tr>
+			<tr>
+				<td colspan="5"><strong>Balance</strong></td>
+				<td class="amount"><strong>$0.00</strong></td>
+			</tr>
+		</tfoot>
+
+	</table>
+
 <% } %>
 
 <!-- ORDER ITEMS TABLE START  -->
