--- a/email-templates/verifyEmailNotification.ejs
+++ b/email-templates/verifyEmailNotification.ejs
@@ -523,7 +523,7 @@
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
-                                <a class="mcnButton " title="Visit Account" href="oven.trademarkers.com/customer/verify-account/<%= user._id %>" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Verify Email Address</a>
+                                <a class="mcnButton " title="Visit Account" href="https://garden.trademarkers.com/customer/verify-account/<%= user._id %>" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Verify Email Address</a>
                             </td>
                         </tr>
                     </tbody>
@@ -570,7 +570,7 @@
 								<p><span style="font-size:18px">If you did not create an account, no further action is required.</span></p>
 								
 								<p><span style="padding-top:20px;font-size:14px">
-									If you’re having trouble clicking the "Verify Email Address" button, copy and paste the URL below into your web browser: https://oven.trademarkers.com/customer/verify-account/<%= user._id %></span></p>
+									If you’re having trouble clicking the "Verify Email Address" button, copy and paste the URL below into your web browser: https://https.trademarkers.com/customer/verify-account/<%= user._id %></span></p>
 <a> </a></div>
 <a> </a>
                         </td>
