--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -8,14 +8,14 @@
         <div id="researcher-app">
             <%- include('../partials/researcher_header'); %>
             
-            <div class="container">
+            <div style="padding:0 15px">
                 <div class="row justify-content-center ">
             
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <%- include('../partials/admin_side_nav'); %>
                     </div>
             
-                    <div class="col-md-9">
+                    <div class="col-md-10">
             
                         <%- body %>
                         
