--- a/views/admin/tasks/index.ejs
+++ b/views/admin/tasks/index.ejs
@@ -10,7 +10,7 @@
     <% } %>
 </div>
                     
-<div clss="col-md-12">
+<div class="col-md-12">
     <table id="myListDataTable" class="display" style="width:100%">
         <thead>
             <tr>
