--- a/views/admin/trademark/index.ejs
+++ b/views/admin/trademark/index.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-12" style="margin-bottom:20px;">  
-    <h2>Tasks List </h2>
+    <h2>Trademarks List </h2>
 
     <% if (flash.success) { %>
     <div class="alert alert-success" role="alert">
@@ -14,7 +14,7 @@
     <% } %>
 </div>
                     
-<div clss="col-md-12">
+<div class="col-md-12">
     <table id="myListDataTable" class="display" style="width:100%">
         <thead>
             <tr>
@@ -35,7 +35,10 @@
                 <td><%= trademark.registrationNumber %></td>
                 <td><%= trademark.status %></td>
                 <td><%= trademark.statusDate %></td>
-                <td><a href="/njs-admin/manage/trademark/view/<%= trademark._id %>"><i class="fa fa-pen"></i></a></td>
+                <td>
+                    <a href="/njs-admin/manage/trademark/view/<%= trademark._id %>"><i class="fa fa-eye"></i></a>
+                    <a href="/njs-admin/manage/trademark/edit/<%= trademark._id %>"><i class="fa fa-pen"></i></a>
+                </td>
             </tr>
             <% } }) %>
         </tbody>
